testsuite/tests/typecheck/should_fail/T14605.stderr
T14605.hs:16:13: error: [GHC-18872]
    • Couldn't match type: forall x. ()
                     with: forall x. x
        arising from a use of ‘coerce’
    • In the expression: coerce @(forall x. ()) @(forall x. x)
      In an equation for ‘duplicate’:
          duplicate = coerce @(forall x. ()) @(forall x. x)

